Tidy up Recorder / Changed the name to webvoicesdk to avoid confusion with webspeech api

--- a/tests/static-html/index.html
+++ b/tests/static-html/index.html
@@ -77,7 +77,7 @@
             box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
         }
     </style>
-    <script src="webspeechsdk-linto.min.js" defer></script>
+    <script src="webVoiceSDK-linto.min.js" defer></script>
     <script src="index.js" defer></script>
 
 </head>
@@ -88,6 +88,8 @@
         <button id="stop">Stop all</button>
         <button id="startrecord">Record events</button>
         <button id="stoprecord">Stop recording</button>
+        <button id="lintomodel">Use LinTO model</button>
+        <button id="slinfoxmodel">Use LinTO-Snips-Firefox model</button>
     </div>
     <hr />
     <div>
