--- a/tests/with-bundler/index.html
+++ b/tests/with-bundler/index.html
@@ -87,6 +87,8 @@
         <button id="stop">Stop all</button>
         <button id="startrecord">Record events</button>
         <button id="stoprecord">Stop recording</button>
+        <button id="lintomodel">Use LinTO model</button>
+        <button id="slinfoxmodel">Use LinTO-Snips-Firefox model</button>
     </div>
     <hr />
     <div>
