--- a/tests/static-html/index.html
+++ b/tests/static-html/index.html
@@ -4,7 +4,7 @@
     <title>Some tests</title>
     <style>
         .linto {
-            font-size: 10rem;
+            font-size: 5rem;
             display: none;
         }
 
@@ -77,43 +77,39 @@
             box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
         }
     </style>
-    <script src="webVoiceSDK-linto.min.js" defer></script>
+    <script src="webVoiceSDK-linto.min.js"></script>
     <script src="index.js" defer></script>
 
 </head>
 
 <body>
+    <div class="linto" id="LinTO">
+        LinTO !
+    </div>
+    <hr />
     <div>
-        <button id="start">Start all</button>
-        <button id="stop">Stop all</button>
+        <button id="start">Start full hotword pipeline</button>
+        <button id="stop">Stop</button>
         <button id="startrecord">Record events</button>
         <button id="stoprecord">Stop recording</button>
         <button id="lintomodel">Use LinTO model</button>
         <button id="slinfoxmodel">Use LinTO-Snips-Firefox model</button>
     </div>
     <hr />
-    <div>
-        <label for="mic">Mic options :</label>
-        <textarea id="mic" rows="10" cols="50"></textarea>
+    <div class="linto" id="LinTO">
+        LinTO !
     </div>
-    <hr />
     <div>
-        <label for="downsampler">Downsampling options :</label>
-        <textarea id="downsampler" rows="10" cols="50"></textarea>
+        <label for="mic">Microphone options :</label>
+        <textarea id="mic" rows="10" cols="50"></textarea>
     </div>
     <hr />
     <div>
         <div class="led-box">
             <div id="VADLed" class="led-green" style="display: none;"></div>
         </div>
-        <label for="useVAD">VAD options :</label>
+        <label for="useVAD">Voice Activity Detection :</label>
         <textarea id="VAD" rows="10" cols="50"></textarea>
-    </div>
-    <hr />
-    <div>
-        <div class="linto" id="LinTO">
-            LinTO !
-        </div>
     </div>
 
 
