'Reworked test/demo page, reworked a bit the reame before publishing to npm'
'

--- a/tests/with-bundler/index.html
+++ b/tests/with-bundler/index.html
@@ -87,7 +87,7 @@
     </div>
     <hr />
     <div>
-        <button id="start">Start full hotword pipeline</button>
+        <button id="start">Start hotword pipeline</button>
         <button id="stop">Stop</button>
         <button id="startrecord">Record events</button>
         <button id="stoprecord">Stop recording</button>
