--- a/tests/static-html/index.html
+++ b/tests/static-html/index.html
@@ -77,7 +77,7 @@
             box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
         }
     </style>
-    <script src="webVoiceSDK-linto.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/linto-ai/webVoiceSDK@master/dist/webVoiceSDK-linto.min.js"></script>
     <script src="index.js" defer></script>
 
 </head>
@@ -88,7 +88,7 @@
     </div>
     <hr />
     <div>
-        <button id="start">Start full hotword pipeline</button>
+        <button id="start">Start hotword pipeline</button>
         <button id="stop">Stop</button>
         <button id="startrecord">Record events</button>
         <button id="stoprecord">Stop recording</button>
