Multibot synapse build

--- a/tests/with-bundler/index.html
+++ b/tests/with-bundler/index.html
@@ -92,7 +92,7 @@
         <button id="startrecord">Record events</button>
         <button id="stoprecord">Stop recording</button>
         <button id="lintomodel">Use LinTO model</button>
-        <button id="slinfoxmodel">Use LinTO-Snips-Firefox model</button>
+        <button id="slinfoxmodel">Use Multibot model</button>
     </div>
     <hr />
     <div class="linto" id="LinTO">
