--- a/tests/with-bundler/index.html
+++ b/tests/with-bundler/index.html
@@ -77,7 +77,7 @@
             box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #89FF00 0 2px 12px;
         }
     </style>
-    <script src="index.js" defer></script>
+    <script type="module" src="index.js"></script>
 
 </head>
 
